--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,16 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Trellis</title>
+	<title>Angular Closure Build (with universal)</title>
 </head>
 <body>
-  <basic></basic>
+  <app-root></app-root>
   <!-- Include zone.js as a prollyfill rather than inside the bundle.
        Allows us to use --dependency_mode=STRICT in closure compiler.
        Otherwise the zone.js file is not imported anywhere and gets dropped.
        See build_closure.sh
   -->
-  <script src="node_modules/zone.js/dist/zone.min.js"></script>
-  <script src="dist/bundle.js"></script>
+  <script src="zone.min.js"></script>
+  <script src="browser.js"></script>
 </body>
 </html>
